Enable committing an aggregate manually